# ml-cost-optimize

./: .env  .gitignore  MANIFEST.in  PUBLISHING.md  README.md  cli.py  config.yaml  constants.py  long-running-deep-agent.py  pyproject.toml  utils.py
.github/workflows/: publish.yml
blog/: blog_deep_agents_cost_optimization.md
ml_cost_analysis/: .env  __init__.py  __main__.py  agent.py  config.yaml  utils.py
ml_cost_analysis/system_prompts/: deep_agent_system_prompt.txt
ml_cost_analysis/tools/: __init__.py  cloudwatch_tools.py  ml_tools.py
result_examples/: ml_cost_analysis_report.md
system_prompts/: deep_agent_system_prompt.txt
tools/: __init__.py  aws_helpers.py
